figured out the alignment problem it had to do with position:fixed

--- a/.obsidian/plugins/make-md/styles.css
+++ b/.obsidian/plugins/make-md/styles.css
@@ -97,6 +97,7 @@ body {
   flex-wrap: nowrap;
 }
 .mk-header-space {
+  position: fixed;
   display: flex;
   flex-direction: column;
   gap: 8px;
