--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -5,6 +5,7 @@
   margin: 3rem auto 6rem;
 }
 .header {
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
